Added toast code & built some of the landing page.
**NEXT** Keep building landing page and work towards having enough UI
to test user CRUD from the client.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-      <title>Example</title>
+      <title>Fin</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
-      <!-- Do not add `script` tags-->
+      <!-- Title icon -->
+      <!-- <link rel="shortcut icon" type="image/png" href="https://imgur.com/K94ugKV.png" /> -->
+      <link rel="shortcut icon" type="image/png" href="https://imgur.com/8F9oCdX.png" />
+      <!-- <link rel="shortcut icon" type="image/png" href="https://imgur.com/JFelPRN.png" /> -->
+      <!-- Landing Header Fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Amatic+SC|East+Sea+Dokdo|Gaegu|Gugi|Julius+Sans+One|Libre+Barcode+39+Extended+Text|Libre+Barcode+39+Text|Passion+One|Poiret+One|Righteous|Sacramento" rel="stylesheet">
+      <!-- Font-Awesome -->
+      <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+      <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+      <!-- Scripts -->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
+
     <body>
-      <h1>Browser Template</h1>
+
+      <!-- Landing Page - Start -->
+      <div class="landing-wrapper" id="landing-wrapper">
+        <h1 class="landing-header">Fin</h1>
+        <button class="proceed-button" id="proceed-button">Proceed</button>
+      </div>
+      <!-- Landing Page - End -->
+
     </body>
+
 </html>
