Register and log-in functionality are complete, along with forms clearing and user notifications. I added some styling as well.
***NEXT*** Build profile resource.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <!-- <link rel="shortcut icon" type="image/png" href="https://imgur.com/JFelPRN.png" /> -->
       <!-- Landing Header Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Amatic+SC|East+Sea+Dokdo|Gaegu|Gugi|Julius+Sans+One|Libre+Barcode+39+Extended+Text|Libre+Barcode+39+Text|Passion+One|Poiret+One|Righteous|Sacramento" rel="stylesheet">
+      <!-- Body fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Tajawal" rel="stylesheet">
       <!-- Font-Awesome -->
       <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
       <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
@@ -22,26 +24,34 @@
 
     <body>
 
-      <!-- Landing Page - Start - **************************** -->
+      <!-- Static Nav - Start - ********************************************************** -->
+      <!-- Static Nav - End - ************************************************************ -->
+
+      <!-- Landing Page - Start - ******************************************************** -->
       <div class="landing-wrapper" id="landing-wrapper">
         <h1 class="landing-header" id="landing-header">Fin</h1>
         <button class="proceed-button animation-delay animated bounceInLeft" id="proceed-button" data-toggle="modal" data-target="#log-in-modal">Proceed</button>
       </div>
-      <!-- Landing Page - End - ****************************** -->
+      <!-- Landing Page - End - ********************************************************** -->
 
-      <!-- Other View - Start - ****************************** -->
-      <!-- Other View - End - ******************************** -->
+      <!-- Chat View - Start - *********************************************************** -->
+      <div class="chat-view-wrapper" id="chat-view-wrapper">Chat View!
+      </div>
+      <!-- Chat View - End - ************************************************************* -->
 
-      <!-- Other View - Start - ****************************** -->
-      <!-- Other View - End - ******************************** -->
+      <!-- Other View - Start - ********************************************************** -->
+      <!-- Other View - End - ************************************************************ -->
 
-      <!-- Other View - Start - ****************************** -->
-      <!-- Other View - End - ******************************** -->
+      <!-- Other View - Start - ********************************************************** -->
+      <!-- Other View - End - ************************************************************ -->
 
-      <!-- Other View - Start - ****************************** -->
-      <!-- Other View - End - ******************************** -->
+      <!-- Other View - Start - ********************************************************** -->
+      <!-- Other View - End - ************************************************************ -->
 
-      <!-- Modals - Start - ********************************** -->
+      <!-- Static Footer - Start - ******************************************************* -->
+      <!-- Static Footer - End - ********************************************************* -->
+
+      <!-- Modals - Start - ************************************************************** -->
 
       <!-- Log-In Modal - Start -->
       <div class="modal fade" id="log-in-modal" tabindex="-1">
@@ -120,7 +130,7 @@
         </div>
       <!-- Log-In Modal - End -->
 
-      <!-- Modals - End - ************************************ -->
+      <!-- Modals - End - **************************************************************** -->
 
     </body>
 
