--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
     <body>
 
       <!-- Static Nav - Start - ********************************************************** -->
+      <div id="static-nav">
+        <nav class="navbar navbar-default static-nav">
+          <div class="container-fluid">
+           <div class="navbar-header">
+             <a class="navbar-brand" href="#">Fin</a>
+           </div>
+           <div id="navbar" class="navbar-collapse collapse">
+             <ul class="nav navbar-nav navbar-right">
+               <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span id="user-email-dropdown">Placeholder</span> <span class="caret"></span></a>
+                 <ul class="dropdown-menu">
+                   <li class="about-li" id="about-li"><a href="#">About</a></li>
+                   <li class="profile-li" id="profile-li"><a href="#">Profile</a></li>
+                   <!-- <li class="reminders-li" id="reminders-li"><a href="#">Reminders</a></li> -->
+                   <li class="edit-pwd-li" id="edit-pwd-li"><a href="#">Edit Password</a></li>
+                   <li class="sign-out-li" id="sign-out-li"><a href="#">Sign Out</a></li>
+                 </ul>
+               </li>
+             </ul>
+           </div>
+         </div>
+        </nav>
+      </div>
       <!-- Static Nav - End - ************************************************************ -->
 
       <!-- Landing Page - Start - ******************************************************** -->
@@ -35,7 +58,7 @@
       <!-- Landing Page - End - ********************************************************** -->
 
       <!-- Chat View - Start - *********************************************************** -->
-      <div class="chat-view-wrapper" id="chat-view-wrapper">Chat View!
+      <div class="chat-view-wrapper" id="chat-view-wrapper">
       </div>
       <!-- Chat View - End - ************************************************************* -->
 
@@ -49,6 +72,7 @@
       <!-- Other View - End - ************************************************************ -->
 
       <!-- Static Footer - Start - ******************************************************* -->
+      <footer id="footer" class="footer"></footer>
       <!-- Static Footer - End - ********************************************************* -->
 
       <!-- Modals - Start - ************************************************************** -->
@@ -82,7 +106,7 @@
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                       <button class="btn btn-default modal-button register-toggle" id="log-in-modal-register-toggle-button">Register?</button>
-                      <button type="submit" class="btn btn-default modal-button" id="log-in-modal-submit-button">Enter</button>
+                      <button type="submit" class="btn btn-default modal-button" id="log-in-modal-submit-button">Proceed</button>
                     </div>
                   </div>
                 </form>
@@ -94,7 +118,7 @@
                 <div class="modal-header">
                   <h4 class="modal-title">Register</h4>
                 </div>
-                <!-- Start form for log-in modal-->
+                <!-- Start form for Register modal-->
                 <div class="modal-body">
                   <form class="form-horizontal" id="register-form">
                       <div class="form-group">
@@ -129,6 +153,87 @@
           </div>
         </div>
       <!-- Log-In Modal - End -->
+
+      <!-- Profile Build Modal - Start -->
+      <div class="modal fade" id="profile-build-modal" tabindex="-1">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content profile-build-modal-content" id="profile-build-modal-content">
+            <!-- Log-In Content -->
+            <div id="profile-build-content-wrapper">
+              <!-- Header -->
+              <div class="modal-header">
+                <h4 class="modal-title">Build Profile</h4>
+              </div>
+              <!-- Start form for profile-build-modal -->
+              <div class="modal-body">
+                <form class="form-horizontal" id="profile-build-form">
+                    <div class="form-group">
+                    <div class="input-div col-sm-12">
+                      <input type="text" class="form-control" id="inputUsername1" name="profile[userName]" placeholder="Username">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="input-div col-sm-12">
+                      <!-- <input type="password" class="form-control" id="inputPhone1" name="profile[phone]" placeholder="Phone Number"> -->
+                      <input type="text" class="input-medium bfh-phone form-control" id="inputPhone1" name="profile[phone]" data-format="ddd-ddd-dddd" placeholder="Phone Number">
+                    </div>
+                  </div>
+              </div>
+                <!-- Footer -->
+                <div class="modal-footer">
+                  <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                      <button type="submit" class="btn btn-default modal-button" id="profile-build-modal-submit-button">Enter</button>
+                    </div>
+                  </div>
+                </form>
+                </div>
+              </div>
+              <!-- End Content -->
+            </div>
+          </div>
+        </div>
+      <!-- Profile Build Modal - End -->
+
+      <!-- Change Password Modal - Start -->
+      <div class="modal fade" id="change-pwd-modal" tabindex="-1">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content change-pwd-modal-content" id="change-pwd-modal-content">
+            <!-- Change-Pwd Content -->
+            <div id="change-pwd-content-wrapper">
+              <!-- Header -->
+              <div class="modal-header">
+                <h4 class="modal-title">Change Password</h4>
+              </div>
+              <!-- Start form for change-pwd-modal -->
+              <div class="modal-body">
+                <form class="form-horizontal" id="change-pwd-form">
+                    <div class="form-group">
+                    <div class="input-div col-sm-12">
+                      <input type="password" class="form-control" id="inputPassword10" name="passwords[old]" placeholder="Current Password">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="input-div col-sm-12">
+                      <input type="password" class="form-control" id="inputPassword11" name="passwords[new]" placeholder="New Password">
+                    </div>
+                  </div>
+              </div>
+                <!-- Footer -->
+                <div class="modal-footer">
+                  <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                      <button type="submit" class="btn btn-default modal-button" id="change-pwd-modal-submit-button">Change Password</button>
+                    </div>
+                  </div>
+                </form>
+                </div>
+              </div>
+              <!-- End Content -->
+            </div>
+          </div>
+        </div>
+      <!-- Change Password Modal - End -->
 
       <!-- Modals - End - **************************************************************** -->
 
