added tooltip to inform the user why I request their number

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   <div class="form-group">
                     <div class="input-div col-sm-12">
                       <!-- <input type="password" class="form-control" id="inputPhone1" name="profile[phone]" placeholder="Phone Number"> -->
-                      <input type="text" class="input-medium bfh-phone form-control" id="inputPhone1" name="profile[phone]" data-format="ddd-ddd-dddd" placeholder="Phone Number">
+                      <input type="text" class="input-medium bfh-phone form-control" id="inputPhone1" name="profile[phone]" data-format="ddd-ddd-dddd" placeholder="Phone Number" data-toggle="tooltip" data-placement="bottom" title="In future iterations, providing Fin with your phone number will allow him to send you reminders." data-animation="true">
                     </div>
                   </div>
               </div>
