user message is appended to DOM, sent to API via web socket, broadcasted back out to client, received at client, and appended to DOM; *****NEXT***** instead, I need to make it so the API sends it to dialogflow and the response is what is broadcasted and appended to the DOM

--- a/index.html
+++ b/index.html
@@ -58,22 +58,13 @@
       <!-- Landing Page - End - ********************************************************** -->
 
       <!-- Chat View - Start - *********************************************************** -->
-      <!-- <div class="chat-view-wrapper" id="chat-view-wrapper">
-        <div class="messages-wrapper">
-          <ul id="messagesContainer" class="messages-ul"></ul>
-        </div>
-        <form class="chat-input-form" id="chatInputForm" action="">
-          <input class="chat-input" id="chatInput" autocomplete="off" />
-          <button class="chat-input-button">Send</button>
-        </form>
-      </div> -->
       <div class="chat-view-wrapper" id="chat-view-wrapper">
         <div class="row">
           <div class="col-xs-1 empty-space"></div>
           <div class="col-xs-10 content-column">
             <div class="row">
               <div class="messages-wrapper col-xs-12">
-                <ul id="messagesContainer" class="messages-ul"></ul>
+                <ul id="messagesUL" class="messages-ul"></ul>
               </div>
             </div>
             <div class="row">
