chat div now auto scrolls to the bottom

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-xs-1 empty-space"></div>
           <div class="col-xs-10 content-column">
             <div class="row">
-              <div class="messages-wrapper col-xs-12">
+              <div class="messages-wrapper col-xs-12" id="messagesWrapper">
                 <ul id="messagesUL" class="messages-ul"></ul>
               </div>
             </div>
