successfully delaying Fins message and appended a notice to user stating that Fin is typing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <link href="https://fonts.googleapis.com/css?family=Amatic+SC|East+Sea+Dokdo|Gaegu|Gugi|Julius+Sans+One|Libre+Barcode+39+Extended+Text|Libre+Barcode+39+Text|Passion+One|Poiret+One|Righteous|Sacramento" rel="stylesheet">
       <!-- Body fonts -->
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Tajawal" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|Roboto+Mono:400,400i|Roboto:400,400i|Source+Code+Pro|Warnes" rel="stylesheet">
       <!-- Font-Awesome -->
       <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
       <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
