--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
                       <input type="password" class="form-control" id="inputPassword1" name="credentials[password]" placeholder="Password">
                     </div>
                   </div>
+                  <div class="register-toggle" id="log-in-modal-register-toggle-button">Register?</div>
               </div>
                 <!-- Footer -->
                 <div class="modal-footer">
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                      <button class="btn btn-default modal-button register-toggle" id="log-in-modal-register-toggle-button">Register?</button>
+                      <!-- <button class="btn btn-default modal-button register-toggle" id="log-in-modal-register-toggle-button">Register?</button> -->
                       <button type="submit" class="btn btn-default modal-button" id="log-in-modal-submit-button">Proceed</button>
                     </div>
                   </div>
@@ -154,12 +155,13 @@
                         <input type="password" class="form-control" id="inputPassword3" name="credentials[password_confirmation]" placeholder="Confirm Password">
                       </div>
                     </div>
+                    <div class="register-toggle" id="register-modal-log-in-toggle-button">Log In?</div>
                 </div>
                   <!-- Footer -->
                   <div class="modal-footer">
                     <div class="form-group">
                       <div class="col-sm-offset-2 col-sm-10">
-                        <button class="btn btn-default modal-button register-toggle" id="register-modal-log-in-toggle-button">Log In?</button>
+                        <!-- <button class="btn btn-default modal-button register-toggle" id="register-modal-log-in-toggle-button">Log In?</button> -->
                         <button type="submit" class="btn btn-default modal-button" id="register-submit-button">Submit</button>
                       </div>
                     </div>
