added JS and CSS to make it so the chat button turns into a submit symbol at a certain screen size and the button styling also adjusts based on screen size

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="row">
               <form class="chat-input-form" id="chatInputForm" action="">
                 <input class="chat-input col-xs-10" id="chatInput" autocomplete="off" />
-                <button class="chat-input-button col-xs-2">Send</button>
+                <button class="chat-input-button col-xs-2" id="chat-input-button">Send</button>
               </form>
             </div>
           </div>
