edited landing page button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <div class="landing-wrapper" id="landing-wrapper">
         <i class="far fa-comment comment-bubble animation-delay animated bounceInRight"></i>
         <h1 class="landing-header" id="landing-header">Fin</h1>
-        <button class="proceed-button animation-delay animated bounceInLeft" id="proceed-button" data-toggle="modal" data-target="#log-in-modal">Proceed</button>
+        <!-- <button class="proceed-button animation-delay animated bounceInLeft" id="proceed-button" data-toggle="modal" data-target="#log-in-modal">Proceed</button> -->
+        <button class="proceed-button" id="proceed-button" data-toggle="modal" data-target="#log-in-modal">Proceed</button>
       </div>
       <!-- Landing Page - End - ********************************************************** -->
 
